tests/baselines/reference/typeParameterAsBaseClass.errors.txt
tests/cases/compiler/typeParameterAsBaseClass.ts(1,20): error TS2693: 'T' only refers to a type, but is being used as a value here.
tests/cases/compiler/typeParameterAsBaseClass.ts(2,24): error TS2422: A class may only implement another class or interface.


==== tests/cases/compiler/typeParameterAsBaseClass.ts (2 errors) ====
    class C<T> extends T {}
                       ~
!!! error TS2693: 'T' only refers to a type, but is being used as a value here.
    class C2<T> implements T {}
                           ~
!!! error TS2422: A class may only implement another class or interface.